# sambaqui-Backend

./: .env  Procfile  db.sqlite3  pyproject.toml  requirements.txt
config/: permissions.py  settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_address_rawmaterial_subtype.py  0002_remove_archaeologicalsite_latitude_and_more.py  0003_archaeologicalsite.py  0003_artefact_collection_category_and_more.py  0003_localization_delete_address.py  0004_alter_artefact_collection_category_and_more.py  0004_collection.py  0005_alter_artefact_id.py  0005_origin.py  0006_alter_artefact_bibliographic_reference_and_more.py  0006_merge_0003_archaeologicalsite_0005_origin.py  0007_artefact_conservationaction.py  0007_artefact_logmovement.py  0008_logchanges_remove_conservationaction_artefact_and_more.py  0008_reserve_logmovement_reserve.py
core/models/: Log_changes.py  Log_movement.py  __init__.py  address.py  archaelogical_site.py  artefact.py  artefact_image.py  collection.py  conservation_actions.py  image.py  localization.py  log_changes.py  log_movement.py  origin.py  rawmaterial.py  reserve.py  sub_type.py  subtype.py
core/paginators/: __init__.py  artefacts.py
core/serializers/: Log_changes.py  Log_movement.py  __init__.py  address.py  archaelogical_site.py  artefact.py  artefact_image.py  collection.py  conservation_actions.py  image.py  localization.py  log_changes.py  log_movement.py  origin.py  raw_material.py  reserve.py  sub_type.py  (+1 more)
infra/: cloudinary.py
usuario/: models.py  router.py  serializers.py  views.py
utils/: upload.py
(+20 files in other folders)
